fixed cta alignment

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -46,7 +46,6 @@ a{
 .cta-wrapper{
   display:flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 /* BUTTON STYLING */
